Fix DEseq2 environement
The Rscript installs the missing libraries if needed but it was having trouble installing XML. So installing DEseq2 with conda solved the problem

--- a/workflow/envs/deseq2_multiple_comparisons.yaml
+++ b/workflow/envs/deseq2_multiple_comparisons.yaml
@@ -14,12 +14,13 @@ dependencies:
   - r-biocmanager
   - r-devtools
   - r-ggrepel 
-  - libxml2
   - curl
   - openssl
   - libtiff
   - bioconductor-org.Mm.eg.db
+  - bioconductor-org.Hs.eg.db
   - bioconductor-annotationdbi
+  - bioconductor-deseq2
   - r-curl
   - r-png
   - libpng
