Use Ensembl canonical transcript for DESeq2
The current pipeline was using all the transcript to run DEseq2. There was multiple transcripts per genes which broke the script. It was decided to use the canonical transcripts to solve the problem

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -78,6 +78,7 @@ include: "rules/deseq_analysis_comparison.smk"
 rule all:
     input:
         "../results/Quant/Count/combined_expression.csv",
+        "../results/genome/hg38/hg38_canonical_transcripts.txt",
         expand("../results/Quant/Count/quant/{sample}/quant.sf", sample=samples),
         expand("../results/Differential/deglist/{comparison}_deg_results.csv", comparison=comparisons),
         "../results/Quant/transcript_to_gene_mapping.csv",
