--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,28 +1,48 @@
-# Path to the sample sheet CSV containing metadata
-sample_sheet: "data/samplesheet_full.csv"   # Path to your samplesheet
+### Parameters needed to be updated or provided on the CLI with
+### --config KEY=VALUE
+# Path to the sample sheet CSV containing metadata. You must use an absolute
+# path if you are using --directory
+sample_sheet: "data/samplesheet.csv"
+# Path to the CSV file containing the comparisons to do. You must use an absolute
+# path if you are using --directory
+comparison_sheet: "data/comparison.csv"
+# This should be mm39 or hg38
+selected_genome: "mm39"
 
-# Column names in the sample sheet for metadata
-group_column: "group"                # Column for group information
-replicate_column: "replicate"        # Column for replicate information
-fastq_1_column: "fastq_1"            # Column for first FASTQ file URL
-fastq_2_column: "fastq_2"            # Column for second FASTQ file URL
-strandedness_column: "strandedness"  # Column for strandedness information
-   # Directory where quality control results will be stored
+### Parameters to update if you are not running the pipeline from the 
+### repository or if you are using --directory.
+# You must use an absolute path if you are using --directory
+atria_image: "atria/atria-4.1.1.sif"
+
+### Parameters dependant on your machine/HPC
 # Number of threads to use for parallel processes
 threads: 20
+star_ram_limit: 40000000000
 
-# Genome reference data for different organisms
-genome:
-  hg38:
-    genome_fa: "../results/genome/human/hg38_genome.fa"
-    gtf: "../results/genome/human/hg38_annotation.gtf"
-    transcriptome: "../results/genome/human/hg38_transcriptome.fa"
-    star_index: "../results/genome/human/star_index"
-    salmon_index: "../results/genome/human/salmon_index"
-  mm39:
-    genome_fa: "../results/genome/mouse/mm39_genome.fa"
-    gtf: "../results/genome/mouse/mm39_annotation.gtf"
-    transcriptome: "../results/genome/mouse/mm39_transcriptome.fa"
-    star_index: "../results/genome/mouse/star_index_genome"
-    salmon_index: "../results/genome/mouse/salmon_index_genome"
+### Parameters to skip section of the pipeline
+# If your reads need trimming, use true, otherwise, false
+trim_reads: true
+# If you don't want to compare sample, use false
+do_comparison: true
 
+### Parameters to update if you already have the files and you don't want
+### to download the files again
+genome_fasta: "resources/{selected_genome}_genome.fa"
+genes_gtf: "resources/{selected_genome}_annotation.gtf"
+cdna_fasta: "resources/{selected_genome}_transcriptome.fa"
+
+### These probably don't need updating
+mm39:
+  species_name: "mus_musculus"
+  species_name_upper: "Mus_musculus"
+  genome_version: "GRCm39"
+  release_version: 113
+hg38:
+  species_name: "homo_sapiens"
+  species_name_upper: "Homo_sapiens"
+  genome_version: "GRCh38"
+  release_version: 113
+
+go_enrichment_pvalue: 0.05
+salmon_libtype: "A"
+salmon_extra_args: ""
